maintainIT2/src/objects/Purchase_Order__c.object
<CustomObject>
    <description>Purchase Order Header</description>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <description>Billing Address</description>
        <formula>Billing_Street__c  &amp; BR() &amp; 
 Billing_City__c  &amp; &quot;, &quot; &amp; 
 Billing_State_Province__c  &amp; &quot; &quot; &amp; 
 Billing_Zip_Postal_Code__c  &amp; BR() &amp; 
 Billing_Country__c</formula>
        <inlineHelpText>Billing Address</inlineHelpText>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <defaultValue>$Setup.Purchase_Order_Para__c.Billing_City__c</defaultValue>
        <description>Billing City</description>
        <inlineHelpText>Billing City</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <defaultValue>$Setup.Purchase_Order_Para__c.Billing_Country__c</defaultValue>
        <description>Billing Country</description>
        <inlineHelpText>Billing Country</inlineHelpText>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <defaultValue>$Setup.Purchase_Order_Para__c.Billing_State_Province__c</defaultValue>
        <description>Billing State / Province</description>
        <inlineHelpText>Billing State / Province</inlineHelpText>
        <label>Billing State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <defaultValue>$Setup.Purchase_Order_Para__c.Billing_Street__c</defaultValue>
        <description>Billing Street Address</description>
        <inlineHelpText>Billing Street Address</inlineHelpText>
        <label>Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Postal_Code__c</fullName>
        <defaultValue>$Setup.Purchase_Order_Para__c.Billing_ZIP_Postal__c</defaultValue>
        <description>Billing Zip / Postal Code</description>
        <inlineHelpText>Billing Zip / Postal Code</inlineHelpText>
        <label>Billing Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Full_Name__c</fullName>
        <formula>Buyer__r.FirstName &amp; &quot; &quot; &amp;  Buyer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer_Phone__c</fullName>
        <description>Buyer Phone Number from User Personal Information</description>
        <formula>Buyer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Buyer Phone Number from User Personal Information</inlineHelpText>
        <label>Buyer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Buyer (Lookup to User)</description>
        <inlineHelpText>Buyer (Lookup to User)</inlineHelpText>
        <label>Buyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Purchase Order Comments (up to 255 characters on each line)</description>
        <inlineHelpText>PO Part Line Comments (up to 255 characters on each line)</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consolidated_PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Target Purchase Order to Consolidate PO Lines.  Used in conjunction with the &quot;Transfer PO Parts&quot; command button.</description>
        <inlineHelpText>Target Purchase Order to Consolidate PO Lines.  Used in conjunction with the &quot;Transfer PO Parts&quot; command button.</inlineHelpText>
        <label>Consolidated PO Target</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Purchase Order Description</description>
        <inlineHelpText>Purchase Order Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOB__c</fullName>
        <description>FOB (Free on Board)</description>
        <inlineHelpText>FOB (Free on Board)</inlineHelpText>
        <label>FOB</label>
        <picklist>
            <picklistValues>
                <fullName>Shipping Point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Destination</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Freight_Terms__c</fullName>
        <description>Freight Terms</description>
        <inlineHelpText>Freight Terms</inlineHelpText>
        <label>Freight Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Collect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Purchase Order Date</description>
        <inlineHelpText>Purchase Order Date</inlineHelpText>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Record_Type__c</fullName>
        <description>Work around to reference the record type in a formula - DO NOT EDIT THE AVAILABLE VALUES IN THIS LIST. Unexpected results will occur. This field is updated via workflow. Should be set to read only for all user profiles.</description>
        <inlineHelpText>Work around to reference the record type in a formula - DO NOT EDIT THE AVAILABLE VALUES IN THIS LIST. Unexpected results will occur. This field is updated via workflow. Should be set to read only for all user profiles.</inlineHelpText>
        <label>PO Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase Requisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Quotation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <description>Payment Terms</description>
        <inlineHelpText>Payment Terms</inlineHelpText>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Upon Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_Date__c</fullName>
        <description>Purchase Order Required Date</description>
        <inlineHelpText>Purchase Order Required Date</inlineHelpText>
        <label>Required Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Via__c</fullName>
        <description>Ship Via - User Defined Picklist</description>
        <label>Ship Via</label>
        <picklist>
            <picklistValues>
                <fullName>Best Way</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <description>Formula Reference to all PO Shipping Address Lines</description>
        <formula>Shipping_Street__c  &amp; BR() &amp;
   Shipping_City__c   &amp; &quot;, &quot; &amp;
   Shipping_State_Province__c  &amp; &quot;  &quot; &amp;
   Shipping_Zip_Postal_Code__c  &amp; BR() &amp;
   Shipping_Country__c</formula>
        <inlineHelpText>Formula Reference to all PO Shipping Address Lines</inlineHelpText>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <description>Shipping City - Initially populated via field update workflow using address from Storeroom.  Value may be manually updated.</description>
        <inlineHelpText>Shipping City - Initially populated via field update workflow using address from Storeroom.  Value may be manually updated.</inlineHelpText>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <description>Shipping Country - Initially populated via field update workflow using address from Storeroom.  Value may be manually updated.</description>
        <inlineHelpText>Shipping Country - Initially populated via field update workflow using address from Storeroom.  Value may be manually updated.</inlineHelpText>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <description>Shipping State / Province - Initially populated via field update workflow using address from Storeroom.  Value may be manually updated.</description>
        <inlineHelpText>Shipping State / Province - Initially populated via field update workflow using address from Storeroom.  Value may be manually updated.</inlineHelpText>
        <label>Shipping State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <description>Shipping Street Address - Initially populated via field update workflow using address from Storeroom.  Value may be manually updated.</description>
        <inlineHelpText>Shipping Street Address - Initially populated via field update workflow using address from Storeroom.  Value may be manually updated.</inlineHelpText>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code__c</fullName>
        <description>Shipping Zip / Postal Code - Initially populated via field update workflow using address from Storeroom.  Value may be manually updated.</description>
        <inlineHelpText>Shipping Zip / Postal Code - Initially populated via field update workflow using address from Storeroom.  Value may be manually updated.</inlineHelpText>
        <label>Shipping Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Purchase Order Status - DO NOT EDIT THE AVAILABLE VALUES IN THIS LIST! Unexpected results will occur.</description>
        <inlineHelpText>Purchase Order Status - DO NOT EDIT THE AVAILABLE VALUES IN THIS LIST! Unexpected results will occur.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Storeroom_Description__c</fullName>
        <description>Formula Reference to Storeroom Description</description>
        <formula>Storeroom_ID__r.Description__c</formula>
        <inlineHelpText>Storeroom Description</inlineHelpText>
        <label>Storeroom Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storeroom_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Storeroom ID</description>
        <inlineHelpText>Storeroom ID</inlineHelpText>
        <label>Storeroom ID</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Accounts with Vendor checkbox selected</description>
        <inlineHelpText>Lookup to Accounts with Vendor checkbox selected</inlineHelpText>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Vendors are Accounts with the &quot;Vendor&quot; Checkbox Selected.  You may optionally remove this filter to select any Account</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Work Order</description>
        <inlineHelpText>Related Work Order (do not populate at the Header if the PO Detail Lines are for different Work Orders)</inlineHelpText>
        <label>Work Order</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Cannot associate a Purchase Order with a Model Work Order</errorMessage>
            <filterItems>
                <field>Work_Order__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Model Work Order</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Purchase_Orders</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Purchase_Order__c.Order</value>
        </filters>
        <label>All Purchase Orders</label>
    </listViews>
    <listViews>
        <fullName>All_Purchase_Requisitions</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Vendor__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Purchase_Order__c.Requisition</value>
        </filters>
        <label>All Purchase Requisitions</label>
    </listViews>
    <listViews>
        <fullName>Purchase_Order_with_Waiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Vendor__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>PO_Record_Type__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Waiting Approval</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Purchase_Order__c.Order</value>
        </filters>
        <label>Purchase Order with Waiting Approval</label>
    </listViews>
    <listViews>
        <fullName>Purchase_Orders_Approved</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Purchase_Order__c.Order</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Purchase Orders Approved</label>
    </listViews>
    <listViews>
        <fullName>Purchase_Orders_Completed</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Purchase_Order__c.Order</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Purchase Orders Completed</label>
    </listViews>
    <listViews>
        <fullName>Purchase_Orders_Released</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Vendor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Purchase_Order__c.Order</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </filters>
        <label>Purchase Orders Released</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{0000000}</displayFormat>
        <label>PO #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <recordTypes>
        <fullName>Order</fullName>
        <active>true</active>
        <description>Purchase Order Record Type</description>
        <label>Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quote</fullName>
        <active>false</active>
        <description>Request for Quotation Record Type</description>
        <label>Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requisition</fullName>
        <active>true</active>
        <description>Purchase Requisition Record Type</description>
        <label>Requisition</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>New_Record_Entry_Status</fullName>
        <active>true</active>
        <description>Controls the valid statuses for entering a new Purchase Order</description>
        <errorConditionFormula>ISNEW() &amp;&amp; NOT(( ISPICKVAL( Status__c , &quot;Request&quot;) || ISPICKVAL( Status__c , &quot;Waiting Approval&quot;) || ISPICKVAL( Status__c , &quot;Approved&quot;)))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>The initial status for a Purchase Order must be set to Request, Waiting Approval, or Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_VST_to_Approved</fullName>
        <active>true</active>
        <description>Controls the Valid PO Status Transition to Approved</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;Approved&quot;) &amp;&amp; NOT(TEXT(PRIORVALUE( Status__c )) = &quot;Waiting Approval&quot;) &amp;&amp; NOT(ISNEW()) &amp;&amp;  ISCHANGED(Status__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>A Purchase Order Status can be updated to Approved only from a previous Status of Waiting Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_VST_to_Canceled</fullName>
        <active>true</active>
        <description>Controls the Valid PO Status Transition to Canceled</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;Canceled&quot;) &amp;&amp; NOT((TEXT(PRIORVALUE( Status__c )) = &quot;In Progress&quot; || TEXT(PRIORVALUE( Status__c )) = &quot;Released&quot; || TEXT(PRIORVALUE( Status__c )) = &quot;Ready to Release&quot;)) &amp;&amp; NOT(ISNEW()) &amp;&amp; ISCHANGED(Status__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>A Purchase Order Status can be updated to Canceled only from a previous Status of Ready to Release, Released, or In Progress</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_VST_to_Closed</fullName>
        <active>true</active>
        <description>Controls the Valid PO Status Transition to Closed</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;Closed&quot;) &amp;&amp; NOT(TEXT(PRIORVALUE( Status__c )) = &quot;Completed&quot;) &amp;&amp; NOT(ISNEW()) &amp;&amp; ISCHANGED(Status__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>A Purchase Order Status can be updated to Closed only from a previous Status of Completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_VST_to_Completed</fullName>
        <active>true</active>
        <description>Controls the Valid PO Status Transition to Completed</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;Completed&quot;) &amp;&amp; NOT(TEXT(PRIORVALUE( Status__c )) = &quot;In Progress&quot;) &amp;&amp; NOT(ISNEW()) &amp;&amp; ISCHANGED(Status__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>A Purchase Order Status can be updated to Completed only from a previous Status of In Progress</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_VST_to_In_Progress</fullName>
        <active>true</active>
        <description>Controls the Valid PO Status Transition to In Progress</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;In Progress&quot;) &amp;&amp; NOT(TEXT(PRIORVALUE( Status__c )) = &quot;Released&quot;) &amp;&amp; NOT(ISNEW()) &amp;&amp; ISCHANGED(Status__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>A Purchase Order Status can be updated to In Progress only from a previous Status of Released</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_VST_to_Ready_to_Release</fullName>
        <active>true</active>
        <description>Controls the Valid PO Status Transition to Ready to Release</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;Ready to Release&quot;) &amp;&amp; NOT(TEXT(PRIORVALUE( Status__c )) = &quot;Approved&quot;) &amp;&amp; NOT(ISNEW()) &amp;&amp; ISCHANGED(Status__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>A Purchase Order Status can be updated to Ready to Release only from a previous Status of Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_VST_to_Rejected</fullName>
        <active>true</active>
        <description>Controls the Valid PO Status Transition to Rejected</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;Rejected&quot;) &amp;&amp; NOT((TEXT(PRIORVALUE( Status__c )) = &quot;Approved&quot; || TEXT(PRIORVALUE( Status__c )) = &quot;Waiting Approval&quot;)) &amp;&amp; NOT(ISNEW()) &amp;&amp; ISCHANGED(Status__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>A Purchase Order Status can be updated to Rejected only from a previous Status of Approved or Waiting Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_VST_to_Released</fullName>
        <active>true</active>
        <description>Controls the Valid PO Status Transition to Released</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;Released&quot;) &amp;&amp; NOT((TEXT(PRIORVALUE( Status__c )) = &quot;Approved&quot; || TEXT(PRIORVALUE( Status__c )) = &quot;Ready to Release&quot;)) &amp;&amp; NOT(ISNEW()) &amp;&amp; ISCHANGED(Status__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>A Purchase Order Status can be updated to Released only from a previous Status of Approved or Ready to Release</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PO_VST_to_Waiting_Approval</fullName>
        <active>true</active>
        <description>Controls the Valid PO Status Transition to Waiting Approval</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;Waiting Approval&quot;) &amp;&amp; NOT((TEXT(PRIORVALUE( Status__c )) = &quot;Request&quot; || TEXT(PRIORVALUE( Status__c )) = &quot;Rejected&quot;)) &amp;&amp; NOT(ISNEW()) &amp;&amp; ISCHANGED(Status__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>A Purchase Order Status can be updated to Waiting Approval only from a previous Status of Request or Rejected</errorMessage>
    </validationRules>
</CustomObject>